Make work on Mac M1 + JDK 17 upgrade